# catchacab

./: .gitignore  LICENSE  README.md
CNNHowManyFingers/: TODO.txt  application.py
documentation/: documentation.tex
emotions_orientation_mod/interactive_face_detection_demo/: Makefile  main.cpp
fingerdetection/src/: fingerdetection.py  trainModel.ipynb
res/human_pose_estimation_demo/: main.cpp
res/human_pose_estimation_demo/src/: render_human_pose.cpp
res/object_detection_demo_ssd_async/: frozen_inference_graph.labels  frozen_inference_graph.mapping  frozen_inference_graph.xml  main.cpp
scripts/: startup_finger.sh  startup_object.sh  startup_pose.sh
src/cac_chooser/: CMakeLists.txt  package.xml
src/cac_chooser/scripts/: chooser.py
src/cac_detector/: CMakeLists.txt  package.xml
src/cac_detector/scripts/: talker.py
src/cac_fingers/: CMakeLists.txt  package.xml
src/cac_fingers/scripts/: fingers.py
src/cac_fusion/: CMakeLists.txt  package.xml
src/cac_fusion/scripts/: fusion.py
src/cac_meta/: CMakeLists.txt  package.xml
src/cac_msgs/: CMakeLists.txt  package.xml
src/cac_msgs/msg/: BBList.msg  Counts.msg  Person.msg
src/pure/: chooser.py  fusion.py
