<?xml version="1.0"?>
<package format="2">
  <name>cac_fusion</name>
  <version>0.0.0</version>
  <description>The cac_fusion package</description>

  <maintainer email="rho2bin@gmail.com">rho2</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <export>

  </export>
</package>
